default/objects/Health_Check_Credit_Factory__c/Health_Check_Credit_Factory__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Health Check Credit Factory</label>
</CustomObject>