default/objects/Health_Check_Credit_Factory__c/fields/Archive_Id__c.field-meta.xml
<CustomField>
    <fullName>Archive_Id__c</fullName>
    <label>Archive Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>