default/objects/Health_Check_Credit_Factory__c/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <label>Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>