default/objects/Health_Check_Credit_Factory__c/fields/Tax_Id__c.field-meta.xml
<CustomField>
    <fullName>Tax_Id__c</fullName>
    <label>Tax Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>