default/objects/Health_Check_Credit_Factory__c/fields/Vat_Number__c.field-meta.xml
<CustomField>
    <fullName>Vat_Number__c</fullName>
    <label>Vat Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>